--- a/FinalProject/FinalProject/Site.Master
+++ b/FinalProject/FinalProject/Site.Master
@@ -8,13 +8,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%: Page.Title %> – Moje aplikace technologie ASP.NET</title>
+    
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="~/favicon.ico" rel="shortcut icon" type="images/main.jpg" />
 
 </head>
 <body>
@@ -53,8 +54,8 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Domů</a></li>
-                        <li><a runat="server" href="~/About">O produktu</a></li>
-                        <li><a runat="server" href="~/Game">Hra</a></li>
+                        <li><a runat="server" href="~/GameOnePlayer">Hra pro jednoho hráče</a></li>
+                        <li><a runat="server" href="~/Game">Hra pro dva hráče</a></li>
                     </ul>
                 </div>
             </div>
